# cppLearning-VM-OS

./: .gitignore
1stLesson/: dec2bin.cpp  main.cpp  minString.cpp
2ndLesson/: Reverse&ReversedFunctoins.cpp  anagrams.cpp  unique_words.cpp
3rdLesson/: main.cpp  names1.cpp  names3.cpp
4thLesson/: EnsureEqual.cpp  Function.cpp  LectureTitle.cpp  RationalClass.cpp  fileWork.cpp
ComplexNumber/: CMakeLists.txt  ComplexNum.cpp  ComplexNum.h  ComplexNum.hpp  a.out  main.cpp
ComplexNumber/Tests/: test1.cpp
Final/: main.cpp
HashTable/: CMakeLists.txt  main.cpp  text.txt
HashTable/Tests/: CMakeLists.txt  test.cpp  test_hash_table.cpp
HashTable/Texts/: correct.txt
HashTable/include/: Dictionary-impl.h  HashTable-impl.h  TextEditor-impl.h
LocalityResearch/: CMakeLists.txt  benchmark.cpp  example1.cpp  example2.cpp  test1  test1.cpp  test2  test2.cpp
Monopoly/: CMakeLists.txt  main.cpp
Queue/: .clang-tidy  CMakeLists.txt  READ.md  main.cpp
Queue/Benchmark/: CMakeLists.txt  benchmark.cpp
Queue/Google_benchmark/: CMakeLists.txt
Queue/Google_test/: CMakeLists.txt  test.cpp
Queue/QueueOnList/: CMakeLists.txt
Queue/QueueOnList/include/: QueueOnList-impl.h  QueueOnList.h
Queue/QueueOnStack/: CMakeLists.txt
Queue/QueueOnStack/Stack/: CMakeLists.txt
Queue/QueueOnStack/Stack/include/: Stack-impl.h
Queue/QueueOnStack/Stack/src/: BoolStack.cpp
Queue/QueueOnStack/include/: QueueOnStack-impl.h  QueueOnStack.h
Queue/QueueOnStack/src/: QueueOnStack.cpp
Queue/Stack/src/: BoolStack.cpp
Queue/Tests/: CMakeLists.txt  QueueTest.cpp  StackTest.cpp
Stack/: .clang-tidy  BoolStack.cpp  Bool_Stack.cpp  Bool_Stack.h  CMakeLists.txt  Stack-impl.h  Stack.cpp  Stack.hpp  Stack_impl.h  main.cpp
Stack/Google_benchmark/: CMakeCache.txt  CMakeLists.txt  benchmark.cpp
Stack/Google_benchmark/lib/src/: .csv_reporter.cc.swp
Stack/Google_test/: CMakeLists.txt  test.cpp
Stack/include/: Stack-impl.h  Stack.h
Stack/src/: BoolStack.cpp
TextEditor/: .clang-format  CMakeLists.txt  main.cpp
TextEditor/Benchmark/: CMakeLists.txt  benchmark.cpp
TextEditor/Tests/: CMakeLists.txt  test_hash_table.cpp  tests.cpp
TextEditor/Texts/: correct.txt  to_edit.txt
TextEditor/include/: Dictionary-impl.h  Dictionary.h  HashTable-impl.h  HashTable.h  TextEditor-impl.h  TextEditor.h
TextEditor/src/: Dictionary.cpp  HashTable.cpp  TextEditor.cpp
WhiteBeltCourse/1stLesson/: CMakeLists.txt  The2stEntry.cpp  functionsFactorialAndPalindrom.cpp  gcf.cpp
WhiteBeltCourse/2ndLesson/: CMakeLists.txt  MonthPlans.cpp  countries.cpp  line.cpp
WhiteBeltCourse/3rdLesson/: CMakeLists.txt  main.cpp  names.cpp  names3.cpp
WhiteBeltCourse/4thLesson/: CMakeLists.txt  OutputWithPrecision.cpp  Read&PrintTable.cpp  StudentsList.cpp  main.cpp
bytecodex86_vs_java/: Foo.java  FooByteCode.txt  test.cpp  test.s
gtestsTest/: main.cpp
gtestsTest/Google_test/: test.cpp
